Added image file upload (for temporary image to be processed), added the library method to api endpoint (/image/process)

--- a/server-api/Pipfile
+++ b/server-api/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [packages]
 fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
+pydantic = "*"
+python-multipart = "*"
+opencv-python = "*"
+numpy = "*"
+scipy = "*"
 
 [dev-packages]
 
